# pyigtl-testbench

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_testbench.sh
python/: testbench_client.py
source/: igtlink_server.cpp  testbench_client.cpp  testbench_server.cpp
